# vectordb-builder

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
mcp_servers/: configuration.py  cursor-mcp-config.json  documentation.py
scripts/: build_index.py  configuration.py  train_retrievers.py
src/vectordb_builder/embedding/: _sentence_transformer.py
src/vectordb_builder/embedding/tests/: test_sentence_transformer.py
src/vectordb_builder/ranker/: __init__.py  _lexical.py  _reranking.py  _semantic.py
src/vectordb_builder/ranker/tests/: test_lexical.py  test_reranking.py  test_semantic.py
src/vectordb_builder/scraping/sklearn/: _api_doc.py  _example_gallery.py  _shared.py  _user_guide.py
src/vectordb_builder/scraping/sklearn/tests/: test_api_doc.py  test_example_gallery.py  test_shared.py  test_user_guide.py
