[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "vectordb_builder"
dynamic = ["version", "readme"]
description = "Building semantic and lexical indexes for documentation of Python open-source projects"
authors = [
    {name = "Guillaume Lemaitre"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.9"

[tool.setuptools.dynamic]
version = { file = "src/vectordb_builder/VERSION.txt" }
readme = { file = "README.md" }

[project.urls]
Homepage = "https://github.com/glemaitre/vectordb_builder"
Source = "https://github.com/glemaitre/vectordb_builder"
Issues = "https://github.com/glemaitre/vectordb_builder/issues"


[tool.setuptools]
packages = ["vectordb_builder"]

[tool.pixi.project]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.dependencies]
python = ">=3.9"

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
exclude = "tests/"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
