[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "vectordb_builder"
version = "0.0.1.dev0"
description = "Building semantic and lexical indexes for documentation of Python open-source projects"
authors = [
    {name = "Guillaume Lemaitre"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
    "scikit-learn==1.6.1",
    "numpydoc>=1.8.0,<2",
    "joblib>=1.4.2,<2",
    "langchain>=0.3.23,<0.4",
    "sphinx-gallery>=0.19.0,<0.20",
    "beautifulsoup4>=4.13.4,<5",
    "pytest>=8.3.5,<9",
    "sentence-transformers>=4.1.0,<5",
]
[dependency-groups]
tests = ["pytest-xdist"]
preamble = [
    "numpy",
    "scipy",
    "scikit-learn==1.6.1",
    "sphinx",
    "numpydoc",
    "sphinx-gallery",
    "matplotlib",
    "pandas",
    "pillow",
    "plotly",
    "polars",
    "pooch",
    "scikit-image",
    "seaborn",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-remove-toctrees",
    "sphinxcontrib-sass",
    "sphinxext-opengraph",
    "sphinx-prompt",
    "pydata-sphinx-theme",
]
dev = [
    "ipykernel",
]

[project.urls]
Homepage = "https://github.com/glemaitre/vectordb_builder"
Source = "https://github.com/glemaitre/vectordb_builder"
Issues = "https://github.com/glemaitre/vectordb_builder/issues"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.dependencies]
python = ">=3.9"

[tool.pixi.pypi-dependencies]
vectordb_builder = { path = ".", editable = true }

[tool.pixi.feature.preamble.tasks]
build-doc-sklearn = { cmd = "make html-noplot", cwd = "reference_packages/scikit-learn/doc" }

[tool.pixi.feature.tests.tasks]
tests = "pytest -vsl src"

[tool.pixi.environments]
default = { solve-group = "default" }
preamble = { features = ["preamble"], solve-group = "default" }
tests = { features = ["tests"], solve-group = "default" }
dev = { features = ["dev", "preamble", "tests"], solve-group = "default" }

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
exclude = "tests/"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
